# ffmpeg

app/: CMakeLists.txt  build.gradle
app/libs/include/libavformat/: avformat.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Computer.cpp  Computer.h  ConcreteObserver.cpp  ConcreteObserver.h  ConcreteSubject.cpp  ConcreteSubject.h  FFDemux.cpp  FFDemux.h  FFdecoder.cpp  FFdecoder.h  IBuilder.cpp  IBuilder.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  Monkey.cpp  Monkey.h  SunWuKong.cpp  SunWuKong.h  TextSig.cpp  TextSig.h  XData.cpp  XData.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XThread.cpp  XThread.h  native-lib.cpp  subject.cpp  subject.h  text.cpp
app/src/main/java/com/adasplus/update/c/: ClientTest.java  FirstOpenGLProjectRenderer.java  GlRender.java  MainActivity.java  PicUtil.java  Utils.java  XPlay.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app1/: .gitignore  build.gradle  business.jks  proguard-rules.pro
app1/src/main/: AndroidManifest.xml
app1/src/main/assets/: private.html  service.html
app1/src/main/res/layout/: activity_activation.xml  activity_alread_activated.xml  activity_calibration.xml  activity_calibration_help.xml  activity_check_wifi.xml  activity_common_help.xml  activity_connect_wifi.xml  activity_devices_help.xml  activity_devices_info.xml  activity_early_warning.xml  activity_guide.xml  activity_hand_video.xml  activity_login.xml  activity_main.xml  activity_main_title.xml  activity_memory_space.xml  activity_net_help.xml  activity_picture_video.xml  activity_previewing_video.xml  activity_priview.xml  activity_traffic_query.xml  activity_update_info.xml  activity_use_help.xml  activity_voice.xml  activity_warn.xml  activity_webview.xml  dialog2_connect.xml  dialog3_connect.xml  dialog_check_fragment.xml  dialog_connect.xml  dialog_connect_fragment.xml  dialog_hand.xml  dialog_reset_factory.xml  fragment_about.xml  fragment_check_wifi.xml  fragment_commom.xml  fragment_connect.xml  fragment_devices_setting.xml  fragment_sim_manager.xml  item_traffic_month.xml  (+5 more)
app1/src/main/res/values/: strings.xml
common/: .gitignore  build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/java/com/adasplus/proadas/: App.java
common/src/main/res/drawable/: bottmm_textcolor_drawable_selector.xml  btn_50bg.xml  btn_50bg_white.xml  btn_bg.xml  btn_enable.xml  cb_password_drawable_selector.xml  cb_switch_drawable_selector.xml  dashed.xml  dialog_connect.xml  ed_focus_bg.xml  ed_unfocus_bg.xml  editext.xml  edtext_selector.xml  rb_about_drawable_selector.xml  rb_common_drawable_selector.xml  rb_priview_drawable_selector.xml  rb_sen_drawable_selector.xml  rb_setting_drawable_selector.xml  rb_sim_drawable_selector.xml  rb_video_bg_au_select.xml  rb_video_bg_hand_select.xml  rb_video_drawable_au_selector.xml  rb_video_drawable_hand_selector.xml  rv_onclick.xml  seekbar_speed_disenable_thumd.xml  seekbar_speed_thumd.xml  seekbar_voice.xml  seekbar_voice_thumd.xml  switch_thumb.xml  text_video_au_nor_bg.xml  text_video_au_selected.xml  text_video_hand_nor_bg.xml  text_video_hand_selected.xml  text_video_selector.xml  white_dashed.xml
common/src/main/res/layout/: dialog_loading.xml  dialog_loading_from.xml
common/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
common/src/main/res/values-sw320dp/: BaseDimen.xml
common/src/main/res/values-sw360dp/: referencedBaseDimen.xml
common/src/main/res/values-sw384dp/: BaseDimen.xml
common/src/main/res/values-sw392dp/: BaseDimen.xml
common/src/main/res/values-sw410dp/: BaseDimen.xml
common/src/main/res/values-sw533dp/: BaseDimen.xml
common/src/main/res/values-sw600dp/: BaseDimen.xml
common/src/main/res/values-sw720dp/: BaseDimen.xml
common/src/main/res/values-sw800dp/: BaseDimen.xml
easypermissions/: build.gradle
easypermissions/src/main/: AndroidManifest.xml
easypermissions/src/main/java/com/adasplus/easypermissions/: AfterPermissionGranted.java  AppSettingsDialog.java  AppSettingsDialogHolderActivity.java  EasyPermissions.java  PermissionRequest.java  RationaleDialogClickListener.java  RationaleDialogConfig.java  RationaleDialogFragment.java  (+1 more)
easypermissions/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
socket/: build.gradle
socket/src/main/: AndroidManifest.xml
socket/src/main/res/values/: strings.xml
(+202 files in other folders)
